# serotonina-2010

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  ChangeLog  Makefile  README  README.md  cmake_install.cmake  cmake_uninstall.cmake  doxy_en.conf  doxy_it.conf  install_directory.txt  install_manifest.txt
cmake/: FindSerotonina.cmake
data/character/: a.net  b.net  c.net  d.net  e.net  f.net  g.net  h.net  i.net  j.net  k.net  l.net  m.net  n.net  o.net  p.net  q.net  r.net  s.net  t.net  u.net  v.net  w.net  x.net  y.net  z.net
data/character/train/: _noise.part  a.part  b.part  c.part  character.train  d.part  e.part  f.part  g.part  h.part  i.part  j.part  l.part  m.part  n.part  o.part  p.part  q.part  r.part  s.part  t.part  w.part  x.part  y.part  z.part
data/face/: face.net
data/face/train/: _face.train  face.train
doc/: README
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  and.cpp  and_x86_64  cmake_install.cmake  coder.cpp  coder_x86_64  create_network.cpp  create_train_algorithm.cpp  exceptions.cpp  face.cpp  how-to-cmake.txt  load_from_file.cpp  load_from_file_x86_64  train_from_array.cpp  train_from_array_x86_64  train_network.cpp  xor.cpp  xor_x86_64
examples/train/: and.net  and.train  coder.net  coder.train  cos.net  cos.test  cos.train  face.net  face.test  face.train  or.net  or.train  sin.net  sin.test  sin.train  sin_cos.net  sin_cos.train  tan.net  tan.test  tan.train  xnor.net  xnor.train  xor.net  xor.train
include/: serotonina.hpp
include/extra/: color-inl.hpp  color.hpp  face-recognition-inl.hpp  face-recognition.hpp  gym-inl.hpp  gym.hpp  ocr-inl.hpp  ocr.hpp  plot-inl.hpp  plot.hpp  version.hpp  version.hpp.in
include/serotonina/: exception.hpp  layer.hpp  macros.hpp  network-inl.hpp  network.hpp  neuron.hpp  string-inl.hpp  string.hpp  synapse.hpp  train-algorithm-inl.hpp  train-algorithm.hpp  trainer-inl.hpp  trainer.hpp  types.hpp  version.hpp  version.hpp.in
include/serotonina/mod/: batch.hpp  irpropm.hpp  irpropp.hpp  rprop.hpp  rpropm.hpp  rpropp.hpp
pkgconfig/: serotonina.pc
src/: network-train.cpp  network.cpp  string.cpp  train-algorithm.cpp  trainer.cpp
src/extra/: color.cpp  face-recognition.cpp  gym.cpp  ocr.cpp  plot.cpp
src/mod/: batch.cpp  irpropm.cpp  irpropp.cpp  rprop.cpp  rpropm.cpp  rpropp.cpp
tools/: CMakeLists.txt
tools/data/character/: a.net  b.net  c.net  d.net  e.net  f.net  g.net  h.net  i.net  j.net  k.net  l.net  m.net  n.net  o.net  p.net  q.net  r.net  s.net  t.net  u.net  v.net  w.net  x.net  y.net  z.net
tools/data/character/train/: _noise.part  b.part  c.part  character.train  f.part  g.part  h.part  i.part  k.part  l.part  m.part  p.part  r.part  s.part  t.part  u.part  v.part  x.part
tools/data/face/train/: non-face.train
tools/include/: color-inl.hpp  color.hpp  face-recognition-inl.hpp  face-recognition.hpp  gym-inl.hpp  gym.hpp  ocr-inl.hpp  ocr.hpp  plot-inl.hpp  plot.hpp  version.hpp.in
tools/src/: color.cpp  face-recognition.cpp  gym.cpp  ocr.cpp  plot.cpp
